<resources>
    <string name="app_name">Rick n Morty</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="character_s_name">Character\'s name</string>
    <string name="character_s_species">Species</string>
    <string name="character_s_status">Status</string>
    <string name="no_characters_found">No characters found</string>
    <string name="profile_name">Fullname:</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="character_s_gender">Character\'s Gender</string>
    <string name="origin">Origin</string>
    <string name="character_s_origin">Character\'s Origin</string>
    <string name="location">Location</string>
    <string name="character_s_location">Character\'s Location</string>
    <string name="fab">fab</string>
</resources>