<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_character_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/baseline_person_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_character_image"
            app:layout_constraintTop_toTopOf="@id/iv_character_image"
            android:textStyle="bold"
            android:text="@string/character_s_name"/>

        <TextView
            android:id="@+id/tv_character_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_character_name"
            app:layout_constraintTop_toBottomOf="@id/tv_character_name"
            android:text="@string/character_s_species"/>

        <TextView
            android:id="@+id/tv_character_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_character_name"
            app:layout_constraintTop_toBottomOf="@id/tv_character_species"
            android:text="@string/character_s_status"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>